[gd_scene load_steps=6 format=2]

[ext_resource path="res://born2b.tres" type="DynamicFont" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Born2bSportyV2.ttf"

[sub_resource type="DynamicFont" id=2]
size = 37
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = SubResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.560784, 0.0980392, 0.654902, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 327.0
margin_top = 139.0
margin_right = 697.0
margin_bottom = 460.0
custom_constants/separation = 60

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 370.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 370.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Pattherns"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 370.0
margin_bottom = 321.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 107.0
margin_right = 262.0
margin_bottom = 161.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 155.0
margin_bottom = 51.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 155.0
margin_bottom = 51.0

[node name="selector_one" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_top = 6.0
margin_right = 16.0
margin_bottom = 44.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="optionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 155.0
margin_bottom = 51.0
rect_min_size = Vector2( 135, 0 )
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 55.0
margin_right = 155.0
margin_bottom = 106.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 155.0
margin_bottom = 51.0

[node name="selector_two" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_top = 6.0
margin_right = 16.0
margin_bottom = 44.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="optionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 20.0
margin_right = 155.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "Options"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 110.0
margin_right = 155.0
margin_bottom = 161.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_right = 155.0
margin_bottom = 51.0

[node name="selector_three" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_top = 6.0
margin_right = 16.0
margin_bottom = 44.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="optionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 20.0
margin_right = 155.0
margin_bottom = 51.0
rect_min_size = Vector2( 135, 0 )
custom_fonts/font = SubResource( 3 )
text = "Exit"
